<resources>
    <string name="app_name">I-Choose-Gacha-mon</string>
    <string name="i_choose_gacha_mon">I Choose Gacha-mon</string>
    <string name="create_account">Create account</string>
    <string name="login">Login</string>
    <string name="new_to_gachamon_create_an_account">New to Gachamon? Create an account</string>
    <string name="got_an_account_login">Got an account? Login</string>
    <string name="settings">Settings</string>
    <string name="setting">*</string>
    <string name="log_in">Log in</string>
    <string name="enter_a_username">Enter a Username</string>
    <string name="enter_password">Enter password</string>
    <string name="create_an_account">Create an account</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="gym">GYM</string>
    <string name="gacha_mon">GACHA-MON</string>
    <string name="formation">FORMATION</string>
    <string name="Summon">SUMMON</string>
    <string name="enhancement">ENHANCEMENT</string>
    <string name="admin_settings">Admin Settings</string>
    <string name="Back_To_Menu"><![CDATA[<]]></string>
    <string name="general_battle_map">General Battle Map</string>
    <string name="boss_battle">BOSS BATTLE</string>
    <string name="delete_account">Delete_Account</string>
    <string name="change_monster_stats">Change Monster stats</string>
    <string name="change_summon_rates">Change Summon Rates</string>
    <string name="change_level_randomizer">Change Level Randomizer</string>
    <string name="monster_level">Lvl: %d</string>
    <string name="user_xp">XP: %d</string>
</resources>