<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="I_choose_gachamon.Settings">

    <TextView
        android:id="@+id/settings_screen_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <Button
        android:id="@+id/delete_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_screen_textView"
        app:layout_constraintVertical_bias="0.057" />

    <Button
        android:id="@+id/change_monster_stats_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_monster_stats"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_account_button"
        app:layout_constraintVertical_bias="0.122" />

    <Button
        android:id="@+id/change_summon_rates_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_summon_rates"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_monster_stats_button"
        app:layout_constraintVertical_bias="0.154" />

    <Button
        android:id="@+id/level_randomizer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_level_randomizer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_summon_rates_button"
        app:layout_constraintVertical_bias="0.197" />
</androidx.constraintlayout.widget.ConstraintLayout>